* Mon Oct 26 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091026
- Check return values of fscanf functions and report errors to user for input data debugging purposes. 
- Change nB variable to nE throughout, including user manual.
- Add instructions for modeling pre-stressed structures in user-manual.

* Thu Oct 22 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091022
- Updated and improved .ZIP installation instructions. 

* Wed Oct 21 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091021
- Adding .ZIP packaging for Linux, Windows, and OSX
- Adding installation instructions to user-manual.html for new .zip packaging
- Adding packaging shell scripts for binary and source .zip packaging
- The previous .bz2 source packaging and .exe Windows installer are still
intact

* Tue Oct 20 2009 John Pye <john.pye@anu.edu.au> 0.20091020
- Adding packaging for Debian, planning new release.

* Mon Oct 19 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091019
- User manual correction to Jxx formulae for square tube and rectangular tube sections.
- Reorganization of the descriptions of section properties and coordinate
transformation in the user manual.

* Sun Oct 18 2009 Henri Gavin <henri.gavin@duke.edu> 0.20091018
- Expanded description of section properties and "roll angle" in the
user manual.

* Tue Sep 22 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090922
- Added flag option '-a' to display "about" information. 
- This option should be helpful to those running Frame3DD in the background,
and wishing to acknowledge Frame3DD in the "about" information of their 
software.  
- Added flag '-w' to enable writing of mass and stiffness matrices.
- Updates suggested by Barry Sanford 
- Updated user-manual.html accordingly.

* Thu Sep 17 2009 Henri Gavin <henri.gavin@duke.edu> 0.20090917